add docs and fix button missing on onboarding provider

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed-meetings": "node scripts/seed-meetings.js",
     "seed-steps": "node scripts/seed-steps.js",
     "seed-step8": "node scripts/seed-step8.js",
+    "seed-course": "node scripts/seed/seedFirstThirtyDaysCourse.js",
     "clean-reflections": "node scripts/clean-and-embed-reflections.js",
     "clean-reflections:dry": "node scripts/clean-and-embed-reflections.js --dry-run",
     "setup-rate-limits": "node scripts/setup-rate-limit-indexes.js",
@@ -77,7 +78,7 @@
     "mongodb-client-encryption": "^6.5.0",
     "mongoose": "^8.19.3",
     "nanoid": "^5.1.6",
-    "next": "16.0.1",
+    "next": "^16.0.1",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^7.0.10",
     "notistack": "^3.0.2",
@@ -87,8 +88,9 @@
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.3.0",
     "sanitize-html": "^2.13.0",
     "sharp": "^0.34.4",
